# sdc-infraops-hack

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CONTRIBUTING.md  CareFlowAI.md  QUALITY_SCORE.md  README.md  apex-changes-log.md  lefthook.yml  package-lock.json  package.json  pyproject.toml
.devcontainer/: README.md  devcontainer.json  post-create.sh  post-start.sh
.github/: copilot-instructions.md  model-catalog.json
.github/agents/: 01-orchestrator-fastpath.agent.md  01-orchestrator.agent.md  02-requirements.agent.md  03-architect.agent.md  04-design.agent.md  04g-governance.agent.md  05-iac-planner.agent.md  06b-bicep-codegen.agent.md  06t-terraform-codegen.agent.md  07b-bicep-deploy.agent.md  07t-terraform-deploy.agent.md  08-as-built.agent.md  09-diagnose.agent.md  10-challenger.agent.md  11-context-optimizer.agent.md  e2e-orchestrator.agent.md
.github/instructions/: agent-authoring.instructions.md  agent-skills.instructions.md  azure-artifacts.instructions.md  code-quality.instructions.md  context-optimization.instructions.md  github-actions.instructions.md  python.instructions.md
.github/plugins/: PLUGIN_VERSION.md
.github/prompts/: 01-orchestrator.prompt.md  02-requirements.prompt.md  03-architect.prompt.md  04-design.prompt.md  04g-governance.prompt.md  05-iac-planner.prompt.md  (+15 more)
partner-enablement/: 00-how-it-works.md  README.md  byos-template.md  when-to-use-apex.md  workshop-guide.md
tools/apex-recall/: pyproject.toml
tools/apex-recall/src/apex_recall/: state_writer.py
tools/apex-recall/src/apex_recall.egg-info/: PKG-INFO
(+233 files in other folders)
